--- a/index.html
+++ b/index.html
@@ -19,5 +19,45 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/babel">
+      const { useState } = React;
+
+      // Component for the form input and submit button
+      const FormComponent = ({ onSubmit }) => {
+        const [names, setNames] = useState("");
+
+        const handleSubmit = (event) => {
+          event.preventDefault();
+          const nameArray = names.split(",").map((name) => name.trim());
+          console.log("Names to submit:", nameArray);
+          onSubmit(nameArray);
+        };
+
+        return (
+          <form onSubmit={handleSubmit}>
+            <input
+              type="text"
+              value={names}
+              onChange={(e) => setNames(e.target.value)}
+              placeholder="Enter names separated by commas"
+            />
+            <button type="submit">Submit</button>
+          </form>
+        );
+      };
+
+      // Component for displaying the results
+      const ResultComponent = ({ results }) => {
+        return (
+          <ul>
+            {results.map((result, index) => (
+              <li key={index}>
+                {result.name}: {result.age} years old
+              </li>
+            ))}
+          </ul>
+        );
+      };
+    </script>
   </body>
 </html>
