Implement form submission, API request, and result display

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               type="text"
               value={names}
               onChange={(e) => setNames(e.target.value)}
-              placeholder="Enter names separated by commas"
+              placeholder="Enter name"
             />
             <button type="submit">Submit</button>
           </form>
